--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
     <script src="./index.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <title>API Pokemon</title>
 </head>
 
 <body>
 
-        
+    
 
 </body>
 </html>
