--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <link rel="stylesheet" href="./index.css">
     
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
 
-    <script src="./index.js"></script>
+    <script src="./index.js" defer></script>
 
     <title>API Pokemon</title>
 </head>
@@ -18,7 +18,7 @@
 
     <div class="menu flex">
 
-        <div id="berries border">Berries</div>
+        <div id="berries">Berries</div>
 
         <div id="contest">Contest</div>
         
@@ -39,6 +39,24 @@
         <div id="pokemon">Pokemon</div>
 
     </div>
+
+    <div id="div_1" class="flex">
+
+        <div id="pokemon_id"></div>
+
+        <div id="pokemon_name"></div>
+
+    </div>
+
+    <div class="flex">
+
+        <div class="previous"></div>
+
+        <div class="next"></div>
+
+    </div>
+
+    <div id="div_2"></div>
 
 </body>
 </html>
