--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
 
+    <script src="https://kit.fontawesome.com/513b5b0081.js" crossorigin="anonymous" defer></script>
+
     <script src="./index.js" defer></script>
 
     <title>API Pokemon</title>
@@ -48,11 +50,11 @@
 
     </div>
 
-    <div class="flex">
+    <div class="flex_center">
 
-        <div class="previous"></div>
+        <div class="previous"><i class="fas fa-arrow-circle-left"></i></div>
 
-        <div class="next"></div>
+        <div class="next"><i class="fas fa-arrow-circle-right"></i></div>
 
     </div>
 
